# Application

doc/: gpio.md
linuxc/gpio/: app.c  gpio_interrupt.c  readme
linuxc/hx8357b-lcd/: Makefile  boardinfo.c  boardinfo.h  font.h  gpio.c  gpio.h  lcd.c  lcd.h  main.c  readme.txt  spi.c  spi.h
linuxc/i2c/: i2ctools.c
linuxc/pwm/: pwm.c  readme
linuxc/socket/: netsocket.c  readme
linuxc/spi/: readme  spidev.c
linuxc/uart/: uart.c
linuxc/watchdog/: watchdog.c
linuxc_prj/: CMakeLists.txt  README.md  arm-toolchain.cmake  build-lib.sh
linuxc_prj/config/: app.conf
linuxc_prj/lib/: libgpiod-2.1.conf
linuxc_prj/scripts/: build-lib.sh  build-libgpiod.sh  build.sh  swap.sh
linuxc_prj/src/: CMakeLists.txt
linuxc_prj/src/algo/: pid.c  pid.h
linuxc_prj/src/app/: app.c  app.h  main.c  usage.md
linuxc_prj/src/core/: config.c  config.h  logger.c  logger.h  thread_pool.c  thread_pool.h
linuxc_prj/src/modules/mcp4725/: mcp4725.c  mcp4725.h
linuxc_prj/src/modules/ssd1306/: linux_oled.c  linux_oled.h  oledfont.h
linuxc_prj/src/net/: tcp_server_client.c  tcp_server_client.h  udp_server_client.c  udp_server_client.h
linuxc_prj/src/peripherals/: adc.c  adc.h  gpio.c  gpio.h  i2c.c  i2c.h  uart.c  uart.h
linuxc_prj/src/util/: cmdline.c  cmdline.h  string_util.c  string_util.h
linuxc_prj/tests/: CMakeLists.txt
python/devmem/: devmem.py
python/gpio/: gpio.py
python/socket/: netsocket.py
